--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="author" content="Robert">
     <link rel="stylesheet" href="style.css">
     <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
-    <title>Happy Birthday Pookie</title>
+    <title>✨✨✨</title>
     
 </head>
 <body>
