--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="container" id="first-message">
         <div class="tenor-gif-embed" data-postid="25418889" data-aspect-ratio="1.23552" data-width="100%"></div>
         <p>
-            Happy Birthday My Love. Ik its not a big deal but tbh for me it is (we're ageing together).And wit the anniversary tommorrow, I wanted to remind you that I love you and I'm glad that we've made it through the first quarter.Even if we're carrying on with our routine, I hope you have fun!<br>
+            Happy Birthday My Love. Ik its not a big deal but tbh for me it is (we're ageing together).And with the anniversary tomorrow, I wanted to remind you that I love you and I'm glad that we've made it through the first quarter.Even if we're carrying on with our routine, I hope you have fun!<br>
             <span>XOXO❤</span></p>
         <button id="first-btn">Next</button>
     </div>
